// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Example without crashing 1`] = `
<body>
  <div>
    <section
      class="rcx-box rcx-box--full rcx-css-1l3nhk9"
    >
      <header
        class="rcx-box rcx-box--full rcx-css-1rjww6t"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-8ifoos"
        >
          <h1
            class="rcx-box rcx-box--full rcx-css-19z81xy"
            data-qa-type="PageHeader-title"
          >
            A platform that prioritizes collaboration over vendor choices
          </h1>
        </div>
      </header>
      <div
        class="rcx-box rcx-box--full rcx-css-1ptgac4"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-1jagyun"
        >
          Say goodbye to inefficient email threads and managing multiple guest accounts. Enable teams to communicate safely with partners, vendors, and suppliers directly from Rocket.Chat regardless of which collaboration platform they use.
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`renders WithButtonsAtTheHeader without crashing 1`] = `
<body>
  <div>
    <section
      class="rcx-box rcx-box--full rcx-css-1l3nhk9"
    >
      <header
        class="rcx-box rcx-box--full rcx-css-1rjww6t"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-8ifoos"
        >
          <h1
            class="rcx-box rcx-box--full rcx-css-19z81xy"
            data-qa-type="PageHeader-title"
          >
            Page Title
          </h1>
          <div
            class="rcx-button-group rcx-button-group--align-start"
            role="group"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--primary rcx-button rcx-button-group__item"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Perform action
              </span>
            </button>
          </div>
        </div>
      </header>
      <div
        class="rcx-box rcx-box--full rcx-css-1ptgac4"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-1jagyun"
        >
          Content slice
        </div>
        <div
          class="rcx-box rcx-box--full rcx-css-1jagyun"
        >
          Content slice
        </div>
        <div
          class="rcx-box rcx-box--full rcx-css-1jagyun"
        >
          Content slice
        </div>
        <div
          class="rcx-box rcx-box--full rcx-css-1jagyun"
        >
          Content slice
        </div>
        <div
          class="rcx-box rcx-box--full rcx-css-1jagyun"
        >
          Content slice
        </div>
        <div
          class="rcx-box rcx-box--full rcx-css-1jagyun"
        >
          Content slice
        </div>
        <div
          class="rcx-box rcx-box--full rcx-css-1jagyun"
        >
          Content slice
        </div>
        <div
          class="rcx-box rcx-box--full rcx-css-1jagyun"
        >
          Content slice
        </div>
        <div
          class="rcx-box rcx-box--full rcx-css-1jagyun"
        >
          Content slice
        </div>
        <div
          class="rcx-box rcx-box--full rcx-css-1jagyun"
        >
          Content slice
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`renders WithScrollableContent without crashing 1`] = `
<body>
  <div>
    <section
      class="rcx-box rcx-box--full rcx-css-1l3nhk9"
    >
      <header
        class="rcx-box rcx-box--full rcx-css-1rjww6t"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-8ifoos"
        >
          <h1
            class="rcx-box rcx-box--full rcx-css-19z81xy"
            data-qa-type="PageHeader-title"
          >
            Page Title
          </h1>
        </div>
      </header>
      <div
        class="rcx-box rcx-box--full rcx-css-1svuzur"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-pln26h rcx-css-1ichk9z"
          data-overlayscrollbars="host"
        >
          <div
            class="os-size-observer"
          >
            <div
              class="os-size-observer-listener"
            />
          </div>
          <div
            class=""
            data-overlayscrollbars-padding=""
            style="margin-right: 0px; margin-bottom: 0px; margin-left: 0px; top: 0px; left: 0px; width: calc(100% + 0px);"
          >
            <div
              class=""
              data-overlayscrollbars-viewport="overflowXHidden overflowYHidden"
              style="padding: 0px 0px 0px 0px;"
              tabindex="-1"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1vwyls7"
              >
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
              </div>
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-horizontal os-theme-dark os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-vertical os-theme-dark os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`renders WithScrollableContentWithShadow without crashing 1`] = `
<body>
  <div>
    <section
      class="rcx-box rcx-box--full rcx-css-1l3nhk9"
    >
      <header
        class="rcx-box rcx-box--full rcx-css-1rjww6t"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-8ifoos"
        >
          <h1
            class="rcx-box rcx-box--full rcx-css-19z81xy"
            data-qa-type="PageHeader-title"
          >
            Page Title
          </h1>
        </div>
      </header>
      <div
        class="rcx-box rcx-box--full rcx-css-1svuzur"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-pln26h rcx-css-1ichk9z"
          data-overlayscrollbars="host"
        >
          <div
            class="os-size-observer"
          >
            <div
              class="os-size-observer-listener"
            />
          </div>
          <div
            class=""
            data-overlayscrollbars-padding=""
            style="margin-right: 0px; margin-bottom: 0px; margin-left: 0px; top: 0px; left: 0px; width: calc(100% + 0px);"
          >
            <div
              class=""
              data-overlayscrollbars-viewport="overflowXHidden overflowYHidden"
              style="padding: 0px 0px 0px 0px;"
              tabindex="-1"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1vwyls7"
              >
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-css-1jagyun"
                >
                  Content slice
                </div>
              </div>
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-horizontal os-theme-dark os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-vertical os-theme-dark os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
